Add API that displays the current temperature in different cities below our thermostat

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <button id="powersaving-on">PSM on</button>
         <button id="powersaving-off">PSM off</button>
       </p>
+      <section>
+        <h1>Current temperature: <span id="current-temperature">Choose Below</span></h1>
+        <select id="current-city">
+          <option value="london">London</option>
+          <option value="paris">Paris</option>
+          <option value="tokyo">Tokyo</option>
+        </select>
+      </section>
+
     </section>
     <script src="src/thermostat.js"></script>
     <script>
@@ -49,6 +58,13 @@
        $('#power-saving-status').text('off')
        updateTemperature()
      })
+
+     $('#current-city').change(function() {
+       var city = $('#current-city').val();
+       $.get('http://api.openweathermap.org/data/2.5/weather?q=' + city + '&appid=a3d9eb01d4de82b9b8d0849ef604dbed&units=metric', function(data) {
+       $('#current-temperature').text(data.main.temp)
+       })
+      })
 
      function updateTemperature() {
       $('#temperature').text('Temperature: ' + thermostat.temperature)
